<resources>
    <string name="app_name">Medical Supply</string>
    <string name="welcome_back">welcome back</string>
    <string name="phone_number">phone number</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="user_name">User name</string>
    <string name="name">name</string>
    <string name="welcome">Welcome</string>

    <string name="lowercase_letters">Lowercase Letters</string>
    <string name="uppercase_letters">Uppercase Letters</string>
    <string name="digits">Digits</string>
    <string name="special_characters">Special Characters</string>
    <string name="check_box">check box</string>
    <string name="register">Register</string>
    <string name="product_details">product details</string>
    <string name="product_name">product name</string>
    <string name="user_review">User Review</string>
    <string name="no_reviews">No Reviews</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="process_to_checkout">process to Checkout</string>
    <string name="products">Products</string>
    <string name="price">Price</string>
    <string name="sub_total">Sub Total</string>
    <string name="carts">Carts</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">We will send you the password reset link to your email</string>
    <string name="your_email">Your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_product">Add Product</string>
    <string name="save">Save</string>
    <string name="search_now">Search Now...</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="description_of_the_product">Description of the product</string>
    <string name="colors">Colors</string>
    <string name="size">Size</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="delete_item_from_cart_message">Do you want to delete this item from your cart?</string>
    <string name="delete_item_from_cart">Delete Item From Cart</string>
    <string name="add_products">Add Products</string>
    <string name="add_page">Add page</string>
</resources>